# agent-sample-v4

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/agent/: context.py  graph.py  middleware.py  models.py  parsing.py  prompts.py  routing.py  state.py  ui.py
backend/app/agent/nodes/: __init__.py  common.py  evaluator.py  executor.py  orchestrator.py  planner.py  synthesizer.py
backend/app/core/: config.py  db.py  state.py
backend/app/mcp/: loader.py
backend/app/memory/: forget.py  manager.py  profile.py  store_query.py  tools.py
backend/app/routers/: chat.py  memory.py  threads.py  tools.py
backend/app/schemas/: chat.py
backend/app/services/: history.py  streaming.py  threads.py
backend/app/tools/: calculator.py  datetime_tool.py  news_search.py  registry.py  ui_widgets.py  web_search.py
backend/tests/: conftest.py  fakes.py  test_forget.py  test_forget_tool.py  test_graph_multiagent.py  test_health.py  test_mcp_loader.py  test_memory_forget_api.py  test_models.py  test_nodes.py  test_parsing.py  test_profile.py  test_registry.py  test_routing.py  test_store_query_forget.py  test_streaming_bridge.py  test_ui.py
docs/: api-contract.md  architecture.md  index.html  ui-ux-art-review.html
docs/assets/: app.js  style.css
docs/guide/: 01-overview.html  02-architecture.html  03-multi-agent.html  04-memory.html  05-streaming.html  06-extensibility.html  07-api-reference.html  (+4 more)
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.json
(+14 files in other folders)
