[project]
name = "agent-backend"
version = "0.1.0"
description = "汎用AIエージェント バックエンド (FastAPI + LangGraph + LangMem + Ollama)"
requires-python = ">=3.12"
dependencies = [
    "langchain==1.3.8",
    "langgraph-checkpoint-postgres==3.1.0",
    "langchain-ollama==1.1.0",
    "langchain-mcp-adapters==0.3.0",
    "langmem==0.0.30",
    "psycopg[binary,pool]>=3.2",
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "pydantic-settings==2.14.1",
    "orjson",
]

# サードパーティツールプラグインの例 (別パッケージ側で宣言する):
# [project.entry-points."agent.tools"]
# my_tool = "my_package.tools:my_tool"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
